chore: java boilerplate
